# lawai-plataforma

./: .env.example  .replit  CONTRIBUTING.md  GITHUB_INTEGRATION.md  GITHUB_SETUP.md  README.md  migrate-tables.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  run.py  run_tests.sh  servidor-simples.js  test-report.md
.github/workflows/: main.yml
app/: main.py
app/api/: api.py
app/api/endpoints/: ai.py  auth.py  cases.py  cases_service.py  clients.py  deadlines.py  deadlines_service.py  documents.py  users.py
app/core/: config.py
app/db/: session.py
app/models/: case.py  client.py  deadline.py  document.py  user.py
app/schemas/: case.py  client.py  deadline.py  document.py  user.py
app/services/: ai_service.py
app/utils/: logger.py  security.py
attached_assets/: Pasted-Estou-desenvolvendo-um-SaaS-jur-dico-com-intelig-ncia-artificial-O-objetivo-principal-da-plataforma--1747681422636.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/hooks/: useABTest.ts  useAuth.ts
client/src/lib/: types.ts
client/src/pages/: ai-test.tsx  analytics.tsx  clients.tsx  dashboard.tsx  deadlines.tsx  document-analysis.tsx  document-viewer.tsx  documents.tsx  (+7 more)
scripts/: update-documents-table.ts
server/: ai-service.ts  deepseek.ts  index.ts  link-health-service.ts  openai.ts  replitAuth.ts  routes.ts  simpleAuth.ts  storage.ts
server/routes/: ai.ts  cases.ts  clients.ts  deadlines.ts  link-health.ts  settings.ts
shared/: schema.ts
tests/: conftest.py
tests/api/: test_ai_services.py  test_clients.py  test_documents.py
(+18 files in other folders)
